add difflib and splink results

--- a/results.ipynb
+++ b/results.ipynb
@@ -349,7 +349,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Module 3: TheFuzz Using Features Mean\n",
+    "## Module 3: TheFuzz\n",
     "Author: Xueni Wang"
    ]
   },
@@ -668,7 +668,24 @@
    "metadata": {},
    "source": [
     "## Module 5: Dedupe\n",
-    "Author: Xinyi Yu"
+    "Author: Xinyi Yu\n",
+    "\n",
+    "**Data Cleaning**\n",
+    "- Renaming the column zip_code in right_df to postal_code for consistency between the two DataFrames.\n",
+    "- Preprocessing routine via the preprocess_data function, which involves cleaning and standardizing postal_code, state, name, address, and city fields. \n",
+    "- Converted state, name, address, and city fields to lowercase, stripped of extra spaces. \n",
+    "- Replace missing values by string ‘unknown’. \n",
+    "\n",
+    "\n",
+    "**Data Matching**\n",
+    "- Data Conversion: Both DataFrames are converted into dictionaries by their indices for processing.\n",
+    "- Setup for Dedupe: The function initializes the RecordLink tool from the dedupe library, specifying fields like name, address, city, state, and postal_code for string-based record linkage.\n",
+    "- Training the Dedupe Model: Using the dedupe library, the model is trained on manually labeled data to identify likely matches.\n",
+    "- Matching Records: The model applies the trained criteria to find and validate matches between the datasets, using a confidence threshold of 0.8 to ensure high relevance.\n",
+    "\n",
+    "**Scoring and Output**\n",
+    "- Generating Output: Matched records are compiled into a list of tuples that include the indices and confidence scores.\n",
+    "- Exporting Results: This data is formatted into a DataFrame with columns for left_dataset, right_dataset, and confidence_score, which is then saved to a CSV file at the specified filepath."
    ]
   },
   {
@@ -1141,6 +1158,93 @@
    "source": [
     "dedupe_pipeline(left_df, right_df, filepath = './data/dedupe_submission.csv')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Module 6: difflib\n",
+    "Author: Shaoze Li\n",
+    "\n",
+    "**Data Preprocessing**:\n",
+    "- Read the CSV files into pandas DataFrames.\n",
+    "- Convert all names and addresses to lowercase strings.\n",
+    "- Remove punctuation from postal codes and zip codes.\n",
+    "- Create a new column called block_key that combines the first two characters of the name, the first character of the address, the state, and the first three characters of the postal/zip code.\n",
+    "\n",
+    "**Entity Resolution**:\n",
+    "- Merge the two datasets on the block_key column using an inner join, creating a DataFrame called merged.\n",
+    "- Calculate the similarity between the names and addresses of the matched entities in merged using the SequenceMatcher from difflib.\n",
+    "- Calculate a confidence score for each match based on the average similarity between names and addresses.\n",
+    "\n",
+    "**Filtering Results**:\n",
+    "- Filter the merged DataFrame to include only matches with a confidence score greater than a specified threshold (default is 0.8).\n",
+    "- Print the filtered results, including the entity_id from the left dataset, the business_id from the right dataset, and the confidence score.\n",
+    "- Overall, this code aims to identify potential matches between entities in two datasets based on similarities in their names and addresses, providing a confidence score to assess the quality of the matches."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.module6_difflib import difflib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         entity_id  business_id  confidence\n",
+      "581             57        32737    0.900000\n",
+      "749             67        77383    0.954545\n",
+      "907             77        28232    0.908163\n",
+      "976             79        62397    0.966667\n",
+      "1028            82        68048    0.827586\n",
+      "...            ...          ...         ...\n",
+      "1132961      94475         2373    0.935897\n",
+      "1133016      94480        77995    0.800680\n",
+      "1133713      94539        79363    0.875000\n",
+      "1133752      94546        83310    0.937500\n",
+      "1134271      94579        80357    0.866944\n",
+      "\n",
+      "[7537 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    left_data_path = './data/left_dataset.csv'\n",
+    "    right_data_path = './data/right_dataset.csv'\n",
+    "    difflib(left_data_path, right_data_path)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Module 7: Splink\n",
+    "Author: Riley Xiong\n",
+    "\n",
+    "**Data Cleaning**: Standardizes postal codes and cleanses text fields such as names, addresses, and city names to ensure uniformity across datasets, facilitating more accurate and reliable comparisons.\n",
+    "\n",
+    "**Blocking Keys Creation**: Implements strategic blocking keys by extracting initial characters of address, name, state, and postal code. This method effectively reduces the computational load by narrowing down potential comparisons to groups of similar entries, enhancing processing efficiency.\n",
+    "\n",
+    "**Matching and Scoring**: Utilizes a combination of deterministic rules and probabilistic scoring based on text similarity measures including Levenshtein, Jaro-Winkler, and Jaccard indexes. These methods prioritize entries with higher similarity scores, focusing on detailed comparisons within the blocked groups.\n",
+    "\n",
+    "**Model Training and Prediction**: Conducts Expectation Maximization to refine match probabilities. Attempts to employ a low threshold for match probability (0.10) in order to capture a broad range of potential matches. However, the extensive number of comparisons generated exceeds processing capabilities, hindering efficient assessment and application of results.\n",
+    "\n",
+    "**Output**: Due to the overwhelming number of comparisons, the system struggles to efficiently process and confirm high-confidence matches. Future adjustments to the blocking and scoring settings are required to manage the computational demands and improve the system's output efficacy."
+   ]
   }
  ],
  "metadata": {
@@ -1159,7 +1263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
