add recordlinkage description

--- a/results.ipynb
+++ b/results.ipynb
@@ -13,7 +13,15 @@
    "metadata": {},
    "source": [
     "## Module 1: RecordLinkage Using Features Weighted Average\n",
-    "Author: Sixuan Li"
+    "Author: Sixuan Li\n",
+    "\n",
+    "- **Targeted Field Comparisons**: This module utilizes a set of specified fields (name, address, city, state, postal code) for individual comparisons.\n",
+    "\n",
+    "- **Weighted Scoring**: Each field comparison contributes differently to the overall score based on predefined weights, which allows for fine-tuning the importance of each field in determining a match. This method might prioritize certain fields over others, based on how the weights are set.\n",
+    "\n",
+    "- **Jaro-Winkler Thresholding**: Comparisons use the Jaro-Winkler similarity with a threshold, which can prevent lower-quality matches from being considered.\n",
+    "\n",
+    "- **Resulting Matches**: The approach is geared towards high precision in matches, potentially at the cost of missing some valid matches if the field weights or thresholds are not optimally set."
    ]
   },
   {
@@ -183,7 +191,15 @@
    "metadata": {},
    "source": [
     "## Module 2: RecordLinkage Using Features Mean\n",
-    "Author: Sixuan Li"
+    "Author: Sixuan Li\n",
+    "\n",
+    "- **Consolidated Address Matching**: This module creates a `full_address` field by concatenating address components, allowing for a holistic comparison of the entire address as one entity rather than separate parts.\n",
+    "\n",
+    "- **Uniform Scoring**: The final match score is the average of the scores from the compared fields (name and full address), treating all aspects equally. This lack of weighting simplifies the model but also assumes all fields are equally important.\n",
+    "\n",
+    "- **Full Jaro-Winkler Comparison**: It applies the Jaro-Winkler method without a threshold for individual field comparisons, which could result in considering more potential matches.\n",
+    "\n",
+    "- **Resulting Matches**: Expected to yield a higher number of matches due to the comprehensive address comparison and the inclusive scoring system, potentially at the risk of including more false positives."
    ]
   },
   {
@@ -343,6 +359,19 @@
    ],
    "source": [
     "record_linkage_pipeline_full_address(left_df, right_df, filename='./data/recordlinkage2_submission.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Key Differences Between Module 1 and Module 2:\n",
+    "\n",
+    "- **Precision vs. Recall**: Module 1 might have higher precision due to its weighted and threshold-based approach, whereas Module 2 is likely to have higher recall, identifying more potential matches by utilizing a full address match and averaging comparison scores.\n",
+    "\n",
+    "- **Complexity in Scoring**: The first module's weighted score allows for nuanced scoring reflective of the relative importance of data fields. The second module's equal weighting is simpler but less tailored to specific field significances.\n",
+    "\n",
+    "- **Field Utilization**: Module 2's use of a single full_address field for matching might capture nuances in address variations better than separate field comparisons in Module 1, which might miss matches due to discrepancies in individual address components."
    ]
   },
   {
@@ -509,8 +538,11 @@
     "## Module 4: fnmatch + textdistance\n",
     "Author: Margaret Ma\n",
     "- **Data Cleaning**: Standardizes postal codes and cleans text fields to ensure uniformity, facilitating accurate comparisons.\n",
+    "\n",
     "- **Blocking Keys Creation**: Forms a block_key for each entry using the initial characters of the address, name, state, and postal code. This key reduces the comparison scope by grouping similar entries together.\n",
+    "\n",
     "- **Matching and Scoring**: Employs fnmatch to find potential name matches and uses textdistance to calculate similarity scores. Matches are confirmed and scored higher if the names are very similar, and a secondary similarity measure is used for others.\n",
+    "\n",
     "- **Output**: Entries with a confidence score above 0.8 are identified as high-confidence matches and saved to a CSV file."
    ]
   },
@@ -1235,15 +1267,15 @@
     "## Module 7: Splink\n",
     "Author: Riley Xiong\n",
     "\n",
-    "**Data Cleaning**: Standardizes postal codes and cleanses text fields such as names, addresses, and city names to ensure uniformity across datasets, facilitating more accurate and reliable comparisons.\n",
+    "- **Data Cleaning**: Standardizes postal codes and cleanses text fields such as names, addresses, and city names to ensure uniformity across datasets, facilitating more accurate and reliable comparisons.\n",
     "\n",
-    "**Blocking Keys Creation**: Implements strategic blocking keys by extracting initial characters of address, name, state, and postal code. This method effectively reduces the computational load by narrowing down potential comparisons to groups of similar entries, enhancing processing efficiency.\n",
+    "- **Blocking Keys Creation**: Implements strategic blocking keys by extracting initial characters of address, name, state, and postal code. This method effectively reduces the computational load by narrowing down potential comparisons to groups of similar entries, enhancing processing efficiency.\n",
     "\n",
-    "**Matching and Scoring**: Utilizes a combination of deterministic rules and probabilistic scoring based on text similarity measures including Levenshtein, Jaro-Winkler, and Jaccard indexes. These methods prioritize entries with higher similarity scores, focusing on detailed comparisons within the blocked groups.\n",
+    "- **Matching and Scoring**: Utilizes a combination of deterministic rules and probabilistic scoring based on text similarity measures including Levenshtein, Jaro-Winkler, and Jaccard indexes. These methods prioritize entries with higher similarity scores, focusing on detailed comparisons within the blocked groups.\n",
     "\n",
-    "**Model Training and Prediction**: Conducts Expectation Maximization to refine match probabilities. Attempts to employ a low threshold for match probability (0.10) in order to capture a broad range of potential matches. However, the extensive number of comparisons generated exceeds processing capabilities, hindering efficient assessment and application of results.\n",
+    "- **Model Training and Prediction**: Conducts Expectation Maximization to refine match probabilities. Attempts to employ a low threshold for match probability (0.10) in order to capture a broad range of potential matches. However, the extensive number of comparisons generated exceeds processing capabilities, hindering efficient assessment and application of results.\n",
     "\n",
-    "**Output**: Due to the overwhelming number of comparisons, the system struggles to efficiently process and confirm high-confidence matches. Future adjustments to the blocking and scoring settings are required to manage the computational demands and improve the system's output efficacy."
+    "- **Output**: Due to the overwhelming number of comparisons, the system struggles to efficiently process and confirm high-confidence matches. Future adjustments to the blocking and scoring settings are required to manage the computational demands and improve the system's output efficacy."
    ]
   }
  ],
