add thefuzz description

--- a/results.ipynb
+++ b/results.ipynb
@@ -379,7 +379,19 @@
    "metadata": {},
    "source": [
     "## Module 3: TheFuzz\n",
-    "Author: Xueni Wang"
+    "Author: Xueni Wang\n",
+    "\n",
+    "**Library Preparation**:\n",
+    "- TheFuzz Python library provides tools for string matching and fuzzy comparison.\n",
+    "\n",
+    "**Data Preprocessing**:\n",
+    "- Checks and imputes missing values.\n",
+    "- Conducts preprocessing on postal codes (zip codes) and other features like name, address, city, and state to standard formats. \n",
+    "\n",
+    "**Data Matching and Analysis**:\n",
+    "- Creates “combined” feature that merge multiple columns into a single string per record, facilitating easier comparisons.\n",
+    "- Implements “block-key” to reduce the comparison space, making the matching process more efficient.\n",
+    "- Performs matching by using “extractOne” function, specifically looking to match entries with a high degree of similarity."
    ]
   },
   {
