edit recordlinkage description

--- a/results.ipynb
+++ b/results.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Module 1: RecordLinkage Using Features Weighted Average\n",
+    "## Module 1: RecordLinkage (Precision Link)\n",
     "Author: Sixuan Li\n",
     "\n",
     "- **Targeted Field Comparisons**: This module utilizes a set of specified fields (name, address, city, state, postal code) for individual comparisons.\n",
@@ -190,7 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Module 2: RecordLinkage Using Features Mean\n",
+    "## Module 2: RecordLinkage (Broad Match)\n",
     "Author: Sixuan Li\n",
     "\n",
     "- **Consolidated Address Matching**: This module creates a `full_address` field by concatenating address components, allowing for a holistic comparison of the entire address as one entity rather than separate parts.\n",
